<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dreamTeam</groupId>
  <artifactId>dsalgo-testNG</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>dsalgo-testNG</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <dependencies>
	  
	   <!-- https://mvnrepository.com/artifact/junit/junit -->
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.13.2</version>
	    <scope>test</scope>
	</dependency>
	
	   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
	  <dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-java</artifactId>
	    <version>4.23.1</version>
	  </dependency>
	  
	  <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-api</artifactId>
	    <version>2.17.2</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
	 <dependency>
	        <groupId>org.apache.logging.log4j</groupId>
	        <artifactId>log4j-core</artifactId>
	        <version>2.17.2</version>
	 </dependency>
	 
	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
	<dependency>
	    <groupId>org.testng</groupId>
	    <artifactId>testng</artifactId>
	    <version>7.10.2</version>
	    <scope>test</scope>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
	<dependency>
	    <groupId>io.qameta.allure</groupId>
	    <artifactId>allure-testng</artifactId>
	    <version>2.29.0</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-bom -->
	<dependency>
	    <groupId>io.qameta.allure</groupId>
	    <artifactId>allure-bom</artifactId>
	    <version>2.29.0</version>
	    <type>pom</type>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
	<dependency>
	    <groupId>com.aventstack</groupId>
	    <artifactId>extentreports</artifactId>
	    <version>5.1.2</version>
	</dependency>
		
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi</artifactId>
	    <version>5.3.0</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
	<dependency>
	    <groupId>org.apache.poi</groupId>
	    <artifactId>poi-ooxml</artifactId>
	    <version>5.3.0</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-compress</artifactId>
	    <version>1.27.1</version>
	</dependency>
	
  </dependencies>


	  
   <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
<build>
     <plugins>
          <plugin>
        	<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->

		    <groupId>io.qameta.allure</groupId>
		    <artifactId>allure-maven</artifactId>
		    <version>2.8</version>
			<executions>
                <execution>
                    <goals>
                        <goal>report</goal>
                    </goals>
                </execution>
            </executions>
         </plugin>
            
    <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>3.5.0</version>
    <configuration>
    <properties>
    <dataproviderthreadcount>3</dataproviderthreadcount>
    <parallel>tests</parallel>
    <threadcount>2</threadcount>
    </properties>
    	<suiteXmlFiles>
    		<suiteXmlFile>testng.xml</suiteXmlFile>
    	</suiteXmlFiles>
    </configuration>
 </plugin>
 
     </plugins>
</build>

	</project>
